# context-switcher-mcp

./: .gitignore  .pre-commit-config.yaml  AI_OPTIMIZED_RESPONSE_PROTOCOL.md  AORP_DEMONSTRATION.md  AORP_IMPLEMENTATION_EXAMPLE.py  AORP_IMPLEMENTATION_ROADMAP.md  AORP_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_DECISION_RECORD.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_VALIDATION.md  CONFIG_COMPATIBILITY_FIXES_VERIFICATION_REPORT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LLM_PROFILING_GUIDE.md  LOGGING_STANDARDIZATION_GUIDE.md  LOGGING_STANDARDIZATION_RESULTS.md  MIGRATION_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_HARDENING_REPORT.md  TYPE_SAFETY_IMPROVEMENTS.md  VALIDATION_REPORT.md  __init__.py  aorp_example_response.py  coverage.json  debug_call_tool.py  debug_mcp_tool.py  debug_performance_metrics.py  demo_logging_performance.py  examples.py  fix_all_circular_imports.py  fix_circular_imports.py  fix_imports.py  fix_test_imports.py  install.sh  logging_migration.py  mypy.ini  (+26 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  pre-commit.yml  security.yml  test.yml
config_templates/: development_config.json  example_config.json  production_config.json
docs/: ADR-001-Unified-Configuration-System.md  Configuration-Reference.md
src/context_switcher_mcp/: __init__.py  __main__.py  aorp.py  backend_factory.py  backend_interface.py  circuit_breaker_manager.py  circuit_breaker_store.py  circular_buffer.py  client_binding.py  compression.py  confidence_metrics.py  config.py  config_base.py  config_legacy.py  config_migration.py  config_migration_old.py  config_old.py  config_validator.py  constants.py  container.py  convergence.py  error_classification.py  error_context.py  error_decorators.py  error_helpers.py  error_logging.py  exceptions.py  input_sanitizer.py  input_validators.py  llm_profiler.py  logging_base.py  logging_config.py  logging_utils.py  metrics_manager.py  model_validators.py  models.py  orchestrator.py  performance_dashboard.py  perspective_orchestrator.py  perspective_selector.py  (+24 more)
src/context_switcher_mcp/config/: __init__.py  core.py  migration.py
src/context_switcher_mcp/config/domains/: __init__.py  models.py  monitoring.py  security.py  server.py  session.py
src/context_switcher_mcp/config/environments/: __init__.py  base.py  development.py  production.py  staging.py
src/context_switcher_mcp/handlers/: session_handler.py  validation_handler.py
src/context_switcher_mcp/helpers/: __init__.py  analysis_helpers.py  session_helpers.py
src/context_switcher_mcp/security/: IMPORT_DEPENDENCY_RESOLUTION_REPORT.md  __init__.py  client_binding_core.py  client_validation_service.py  dependency_analysis_report.json  dependency_analyzer.py  enhanced_validators.py  import_dependency_refactoring_plan.md  path_validator.py  secret_key_manager.py  secure_logging.py  security_event_tracker.py  security_monitor.py
src/context_switcher_mcp/tools/: admin_tools.py  analysis_tools.py  perspective_tools.py  profiling_tools.py  session_tools.py
src/logging_migration_backup/src/: __init__.py  __main__.py  aorp.py  backend_factory.py  backend_interface.py  confidence_metrics.py  config.py  config_base.py  config_migration.py  config_migration_old.py  config_validator.py  container.py  error_decorators.py  exceptions.py  input_sanitizer.py  input_validators.py  llm_profiler.py  logging_config.py  logging_utils.py  metrics_manager.py  models.py  performance_dashboard.py  profiling_wrapper.py  rate_limiter.py  security_context_sanitizer.py  security_events.py  session_concurrency.py  session_manager.py  templates.py  thread_lifecycle_manager.py  thread_manager.py  validated_config.py  validation.py
src/logging_migration_backup/src/config/: __init__.py  core.py  migration.py
src/logging_migration_backup/src/config/domains/: __init__.py  monitoring.py  server.py  session.py
src/logging_migration_backup/src/config/environments/: development.py  production.py
src/logging_migration_backup/src/handlers/: __init__.py  session_handler.py  validation_handler.py
src/logging_migration_backup/src/security/: IMPORT_DEPENDENCY_RESOLUTION_REPORT.md  __init__.py  dependency_analysis_report.json  import_dependency_refactoring_plan.md  secure_logging.py  security_event_tracker.py  security_monitor.py
src/logging_migration_backup/src/tools/: __init__.py  admin_tools.py  analysis_tools.py  perspective_tools.py  profiling_tools.py  session_tools.py
tests/: conftest.py  test_admin_tools.py  test_analysis_tools.py  test_aorp_core.py  test_aorp_integration.py  test_aorp_quality.py  test_aorp_scenarios.py  test_backend_interface.py  test_client_binding_security.py  test_confidence_metrics.py  test_config_base_comprehensive.py  test_config_compatibility_fixes.py  test_config_comprehensive.py  test_context_switcher.py  test_critical_fixes.py  test_exception_handling.py  test_exception_imports.py  test_llm_profiling.py  test_main_module.py  test_memory_leak_fix.py  test_model_validators.py  test_perspective_orchestrator.py  test_profiling_tools.py  test_protocols_comprehensive.py  test_race_conditions_basic.py  test_reasoning_orchestrator.py  test_response_formatter.py  test_security_comprehensive.py  test_security_context_sanitization.py  test_security_enhancements.py  test_security_fixes.py  test_security_validation.py  test_session_concurrency.py  test_session_data.py  test_session_lock_fix.py  test_session_lock_manager.py  test_session_race_conditions.py  test_session_security.py  test_session_tools.py  test_simplified_session_architecture.py  (+9 more)
tests/backends/: test_backend_comprehensive.py
tests/security/: __init__.py  test_client_binding_core.py  test_client_validation_service.py  test_input_sanitization_comprehensive.py  test_secret_key_manager.py  test_security_event_tracker.py
tests/tools/: test_analysis_tools_comprehensive.py
