[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-switcher-mcp"
version = "0.1.0"
description = "MCP server for multi-perspective analysis using thread orchestration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.272",
]

[project.scripts]
context-switcher = "context_switcher_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_switcher_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
