[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-switcher-mcp"
version = "0.1.0"
description = "MCP server for multi-perspective analysis using thread orchestration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0,<2.0.0",
    "httpx>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "litellm>=1.0.0,<2.0.0",
    "boto3>=1.28.0,<2.0.0",
    "psutil>=5.9.0,<6.0.0",
    "numpy>=1.24.0,<2.0.0",
    "chain-of-thought-tool",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.0.272,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.3.0,<4.0.0",
    "black>=23.0.0,<24.0.0",
]

[project.scripts]
context-switcher = "context_switcher_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_switcher_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.8",
]
